# ahjo

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  azure-SQL-selftest-pipeline.yml  azure-pipelines.yml  bitbucket-pipelines.yml  msi_build.py  msi_build_requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: safety.yml
ahjo/: __init__.py  action.py  context.py  credential_handler.py  interface_methods.py  operation_manager.py
ahjo/database_utilities/: __init__.py  conn_info.py  sqla_utilities.py  sqlcmd.py
ahjo/operations/: __init__.py
ahjo/operations/general/: __init__.py  alembic.py  git_version.py  initialization.py
ahjo/operations/tsql/: __init__.py  create_db.py  create_db_login.py  create_db_permissions.py  create_db_structure.py  db_object_properties.py  sqlfiles.py
ahjo/resources/: logger.ini
ahjo/resources/files/: .gitignore  ahjo_actions.py  alembic.ini  config_development.jsonc
ahjo/resources/sql/queries/: column_descriptions.sql  function_descriptions.sql  procedure_descriptions.sql  schema_descriptions.sql  table_descriptions.sql  view_descriptions.sql
ahjo/resources/sql/templates/: schema.procedureName.sql
ahjo/scripts/: __init__.py  init_project.py  master.py  master_actions.py
azure-pipelines/: MPA-trigger-template.yml  azure-build-template.yml  azure-scan-template.yml  azure-test-template.yml  azure-variables-template.yml
src/ahjo/: __init__.py  action.py  config.py  context.py  credential_handler.py  interface_methods.py  operation_manager.py
src/ahjo/database_utilities/: __init__.py  conn_info.py  pyodbc_utilities.py  sqla_utilities.py  sqlcmd.py
src/ahjo/logging/: __init__.py  db_formatter.py  db_handler.py  db_logger.py  log_config.py  winEventLogger.py  win_event_logger.py
src/ahjo/operations/: __init__.py
src/ahjo/operations/general/: __init__.py  alembic.py  bulk_insert.py  db_info.py  db_tester.py  git_hook.py  git_version.py  initialization.py  multi_project_build.py  scan.py  sqlfiles.py  upgrade.py  upgrade_worker.py  visualization.py
src/ahjo/operations/tsql/: __init__.py  collation.py  create_db.py  create_db_login.py  create_db_permissions.py  create_db_structure.py  db_info.py  db_object_properties.py  set_statements.py  sqlfiles.py
src/ahjo/resources/: customLogger.py  logger.ini  logger_alembic.ini  logger_root.ini  logger_sqlalchemy.ini  logger_winLog.ini  winEventLogger.py
src/ahjo/resources/files/: .gitignore  ahjo_actions.py  alembic_dummy  config_development.json  config_development.jsonc  config_development.yaml  env.py
src/ahjo/resources/files/git_hooks/: pre-commit
src/ahjo/resources/sql/queries/: extended_properties_columns.sql  extended_properties_functions.sql  extended_properties_procedures.sql  extended_properties_schemas.sql  extended_properties_tables.sql  extended_properties_views.sql  procedure_descriptions.sql  schema_descriptions.sql
src/ahjo/resources/sql/templates/: add_users_to_db_roles.sql  create_db_roles.sql  create_db_users.sql  grant_db_permissions.sql  schema.tableName.sql  (+1 more)
src/ahjo/scripts/: __init__.py  alembic_api.py  config.py  init_project.py  install_git_hook.py  master.py  master_actions.py  multi_project_build.py  scan_project.py  upgrade_project.py  upgrade_worker.py  utils.py
src/ahjo/util/: __init__.py  jsonc.py
test/: conftest.py  fixtures.py  test_action.py  test_context.py  test_credential_handler.py  test_interface_methods.py  test_operation_manager.py
test/database_utilities/: test_conn_info.py  test_sqla_utilities.py
test/fixtures/: general.py  mssql.py
test/operations/: fixtures.py
test/operations/general/: test_alembic.py  test_git_version.py
test/operations/tsql/: fixtures.py  test_db_object_properties.py  utils.py
test/samples/mssql_project/: .gitignore  README.md  ahjo_actions.py  config_development.json  config_development.jsonc
test/samples/mssql_project/alembic/: env.py
test/test_database_utilities/: test_conn_info.py  test_sqla_utilities.py
test/test_database_utilities/test_sqla_utilities/: test_connection.py  test_create_sqlalchemy_engine.py  test_create_sqlalchemy_url.py  test_execute_from_file.py  test_execute_from_file.yaml  test_execute_query.py
test/test_operations/test_general/: test_alembic.py  test_bulk_insert.py  test_db_tester.py  test_git_version.json  test_git_version.py  test_logger.py  test_scan.py  test_upgrade.py
test/test_operations/test_tsql/: test_collation.py  test_create_db.py  test_db_object_properties.py
(+30 files in other folders)
