[metadata]
name = ahjo
description = Database deployment framework
keywords = ahjo
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/ALMPartners/ahjo
author = ALM Partners Oy
author_email = servicedesk@almpartners.fi
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
python_requires = >=3.8
package_dir=
    =src
packages = find_namespace:
setup_requires =
    setuptools_scm
install_requires =
    alembic >= 1.9, < 1.14
    pyparsing >= 3.0, < 3.2
    sqlalchemy >= 2.0, < 2.1
    PyYAML >= 6.0, < 6.1
    lark >= 1.1, < 1.2

[options.extras_require]
mssql = pyodbc >= 5.0, < 5.1
azure = azure-identity >= 1.14, < 1.16

[options.entry_points]
console_scripts =
    ahjo = ahjo.scripts.master:main
    ahjo-init-project = ahjo.scripts.init_project:main
    ahjo-multi-project-build = ahjo.scripts.multi_project_build:main
    ahjo-upgrade = ahjo.scripts.upgrade_project:main
    ahjo-scan = ahjo.scripts.scan_project:main
    ahjo-install-git-hook = ahjo.scripts.install_git_hook:main
    ahjo-config = ahjo.scripts.config:main

[options.packages.find]
where=src
