[metadata]
name = ahjo
description = Database deployment framework
keywords = ahjo
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/ALMPartners/ahjo
author = ALM Partners Oy
author_email = servicedesk@almpartners.fi
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Database
    Programming Language :: Python :: 3.13

[options]
include_package_data = True
python_requires = >=3.13
package_dir=
    =src
packages = find_namespace:
setup_requires =
    setuptools_scm
install_requires =
    alembic ~= 1.17.2
    pyparsing ~= 3.2.0
    sqlalchemy ~= 2.0.0
    PyYAML ~= 6.0.0
    lark ~= 1.3.0
    networkx ~= 3.5.0

[options.extras_require]
mssql = pyodbc ~= 5.3.0
azure = azure-identity ~= 1.25.0
visualizations = plotly ~= 6.5.0
dev = black ~= 25.11.0
    pre-commit ~= 4.4.0
    pytest ~= 9.0.0
    tox ~= 4.32.0

[options.entry_points]
console_scripts =
    ahjo = ahjo.scripts.master:main
    ahjo-init-project = ahjo.scripts.init_project:main
    ahjo-multi-project-build = ahjo.scripts.multi_project_build:main
    ahjo-upgrade = ahjo.scripts.upgrade_project:main
    ahjo-scan = ahjo.scripts.scan_project:main
    ahjo-install-git-hook = ahjo.scripts.install_git_hook:main
    ahjo-config = ahjo.scripts.config:main
    alembic-api = ahjo.scripts.alembic_api:main

[options.packages.find]
where=src
